examples/test/testpolicy12800.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12800
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key39: value9
      key6: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value11
          key48: value48
      podSelector:
        matchLabels:
          key13: value28
          key16: value20
